--- a/front/farm.html
+++ b/front/farm.html
@@ -122,6 +122,26 @@
                 <h2>OVEN</h2>
                 <b>Our oven is a conical artisanal oven, 100% volcanic rock.</b>
               </div>
+              <div class="link3 link">
+                <h2>GRINDING PROCESS</h2>
+                <!-- <b>Our oven is a conical artisanal oven, 100% volcanic rock.</b> -->
+              </div>
+              <div class="link4 link">
+                <h2>WATER</h2>
+                <b>Our water is sourced from natural springs on our land, and used for our fermentation</b>
+              </div>
+              <div class="link5 link">
+                <h2>FERMENTATION</h2>
+                <b>Our fermentation tanks are farmed Cyprus, and sealed naturally with 100% beeswax, from our bee houses</b>
+              </div>
+              <div class="link6 link">
+                <h2>DISTILLATION</h2>
+                <div class="bottom">
+                  <p>Our still are 100% handmade hammered copper.</p>
+                  <span>WHY hammered Copper?</span>
+                  <p>Hammered Copper contact increases surface area promoting clean tasting mezcal, preventing the development of unpleasant aromas and taste, resulting in the creation of a lighter, crisp tasting and ultra-premium mezcal.</p>
+                </div>
+              </div>
               
             </div>
             <div class="section2 section">
@@ -132,6 +152,18 @@
               <div class="link2 link">
                 <img src="./src/img/menu2.jpg" alt="Argato">
               </div>
+              <div class="link3 link">
+                <p>Our tahona is a 2-ton volcanic pressing wheel with our grinding surface also being 100% volcanic stone. The use of a two-ton stone is a gentler way to extract the agave juice. The natural mineral in the volcanic tahona makes a smoother ultra- premium mezcal. Unlike agave shredders and other mechanized methods that rip fibers and skins from the agave releasing more bitter flavors.
+                <p>We use a solar powered motorized machine to move the tahona and grind the agaves, maintaining artisanal practice.</p>
+                <p>Traditionally the tahona was pulled by a donkey, mule or horse, we keep the traditional process by using an electric motor advocating the protection and well-being of animals with the added benefits of a more hygienic method preventing feces and urine coming in contact with the cooked agaves and grinding process.</p> 
+              </div>
+              <div class="link4 link">
+                <img src="./src/img/menu2.4.jpg" alt="Argato">
+              </div>
+              <div class="link5 link">
+              </div>
+              <div class="link6 link">
+              </div>
             </div>
             <div class="section3 section">
               <div class="link1 link">
@@ -139,6 +171,18 @@
               </div>
               <div class="link2 link">
                 <img src="./src/img/menu2.1.jpg" alt="Menu" />
+              </div>
+              <div class="link3 link">
+                <img src="./src/img/menu2.2.jpg" alt="Menu" />
+              </div>
+              <div class="link4 link">
+                <img src="./src/img/menu2.3.jpg" alt="Menu" />
+              </div>
+              <div class="link5 link">
+                <img src="./src/img/menu2.5.jpg" alt="Menu" />
+              </div>
+              <div class="link6 link">
+                <img src="./src/img/menu2.6.jpg" alt="Menu" />
               </div>
             </div>
           </div>
