--- a/front/masters.html
+++ b/front/masters.html
@@ -56,17 +56,21 @@
               <h1>A century of family tradition in every drop</h1>
             </div>
         </section>
+        <section class="sliderCover in">
+          <div class="slide main">
+            <div class="text">
+              <h2>guided by 3 Masters mezcaleros </h2>
+              <p>Each master brings at least 5 generations of mezcal making traditions that has been passed on for over 100 years</p>
+              <button class="mezcaleros">know more</button>
+            </div>
+            <div class="image">
+              <img src="./src/img/masters/masters0.jpg" alt="Masters">
+            </div>
+          </div>
+        </section>
         <section class="sliderMasters">
           <div class="container">
-            <div class="slide main">
-              <div class="text">
-                <h2>guided by 3 Masters mezcaleros </h2>
-                <p>Each master brings at least 5 generations of mezcal making traditions that has been passed on for over 100 years</p>
-              </div>
-              <div class="image">
-                <img src="./src/img/masters/masters0.jpg" alt="Masters">
-              </div>
-            </div>
+            
             <div class="slide normal">
               <div class="text">
                 <p>MAESTRO MEZCALERO</p>
