--- a/front/farm.html
+++ b/front/farm.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farm</title>
+    <link rel="shortcut icon" href="./src/img/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="./src/css/styles.css">
 </head>
 <body>
@@ -187,6 +188,102 @@
             </div>
           </div>
         </section>
+        <section class="secondary-movil">
+          <ul class="arrowsSlider">
+              <li class="prev"><img src="./src/img/izquierda.svg" alt="Left arrow"></li>
+              <li class="next"><img src="./src/img/derecha.svg" alt="arrow"></li>
+          </ul>
+          <div class="slider">
+            <div class="item">
+              <div class="title">
+                <h3>DISTILLERY</h3>
+              </div>
+              <div class="subtitle">
+                <h2>Distillery building</h2>
+                <b>Made from 100% NATURAL stone from our farm</b>
+              </div>
+              <div class="text-image">
+                <div class="texto">
+                  <p>We chose natural stone from our farm since it is the original organic building material not requiring chemicals for production, and produced minimal excess material, and highly recyclable.</p>
+                  <p>The stone was extracted and not artificially produced to build our distillery. By extracting the stone, our workers hand removed the and collected surface stone, cutting it and polishing it. It was not mined or chemically produced, which both destroy the natural environment.</p>  
+                </div>
+              </div>
+
+            </div>
+            <div class="item">
+              <div class="title">
+                <h3>OVEN</h3>
+              </div>
+              <div class="subtitle">
+                <h2>OVEN</h2>
+                <b>Our oven is a conical artisanal oven, 100% volcanic rock.</b>
+              </div>
+              <div class="text-image">
+                <img src="./src/img/menu2.jpg" alt="">
+              </div>
+
+            </div>
+            <div class="item">
+              <div class="title">
+                <h3>GRINDING PROCESS</h3>
+              </div>
+              <div class="subtitle">
+                <h2>GRINDING PROCESS</h2>
+                <b>Made from 100% NATURAL stone from our farm</b>
+              </div>
+              <div class="text-image">
+                <div class="texto">
+                  <p>Our tahona is a 2-ton volcanic pressing wheel with our grinding surface also being 100% volcanic stone. The use of a two-ton stone is a gentler way to extract the agave juice. The natural mineral in the volcanic tahona makes a smoother ultra- premium mezcal. Unlike agave shredders and other mechanized methods that rip fibers and skins from the agave releasing more bitter flavors.</p>
+                  <p>We use a solar powered motorized machine to move the tahona and grind the agaves, maintaining artisanal practice.</p>
+                  <p>Traditionally the tahona was pulled by a donkey, mule or horse, we keep the traditional process by using an electric motor advocating the protection and well-being of animals with the added benefits of a more hygienic method preventing feces and urine coming in contact with the cooked agaves and grinding process.</p>  
+                </div>
+              </div>
+
+            </div>
+            <div class="item">
+              <div class="title">
+                <h3>WATER</h3>
+              </div>
+              <div class="subtitle">
+                <h2>WATER</h2>
+                <b>Our water is sourced from natural springs on our land, and used for our fermentation</b>
+              </div>
+              <div class="text-image">
+                <img src="./src/img/menu2.4.jpg" alt="">
+              </div>
+
+            </div>
+            <div class="item">
+              <div class="title">
+                <h3>FERMENTATION</h3>
+              </div>
+              <div class="subtitle">
+                <h2>FERMENTATION</h2>
+                <b>Our fermentation tanks are farmed Cyprus, and sealed naturally with 100% beeswax, from our bee houses</b>
+              </div>
+              <div class="text-image">
+                <img src="./src/img/menu2.5.jpg" alt="">
+              </div>
+
+            </div>
+            <div class="item">
+              <div class="title">
+                <h3>DISTILLATION</h3>
+              </div>
+              <div class="subtitle">
+                <h2>DISTILLATION</h2>
+                <b></b>
+              </div>
+              <div class="text-image">
+                <div class="texto">
+                  <p>Our still are 100% handmade hammered copper.</p>
+                  <i>WHY hammered Copper?</i>
+                  <p>Hammered Copper contact increases surface area promoting clean tasting mezcal, preventing the development of unpleasant aromas and taste, resulting in the creation of a lighter, crisp tasting and ultra-premium mezcal.</p>  
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
         
         
     </main>
@@ -195,7 +292,7 @@
       <div class="icon">
         <img src="./src/img/stampRed.svg" alt="Stamp Argato">
       </div>
-      <div class="bottom">
+      <div class="bottom">  
         <div class="explore">
           <h3>Explore</h3>
           <ul>
